--- a/MI_AG/pyproject.toml
+++ b/MI_AG/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "cupy>=10.6.0", "KDEpy>=1.1.0", "bed-reader>=0.2.23"]
+requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed-reader>=0.2.23"]
 build-backend = "setuptools.build_meta"
 
 [project]
