--- a/MI_AG/pyproject.toml
+++ b/MI_AG/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed-reader>=0.2.23"]
+requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed-reader>=0.2.23", "multiprocess>=0.70.6"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "MI_AG_kyang"
-version = "0.0.2"
+name = "MI_AG"
+version = "0.2.3"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
