--- a/MI_AG/pyproject.toml
+++ b/MI_AG/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed-reader>=0.2.23", "multiprocess>=0.70.6"]
+requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed_reader", "multiprocess>=0.70.6",  "bed-reader"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "MI_AG"
-version = "0.2.5"
+version = "0.6.3"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
-description = "Use mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large genetic data based on bed/bim/fam."
+description = "Use mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large genetic data based on bed/bim/fam. Multiprocessing is now available."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
