--- a/fastHDMI/pyproject.toml
+++ b/fastHDMI/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed_reader", "multiprocess>=0.70.6",  "bed-reader"]
+requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed_reader", "multiprocess>=0.70.6",  "bed-reader", "pandas>=1.4.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastHDMI"
-version = "0.9.5"
+version = "0.9.5.9"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
-description = "Use mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large genetic data based on bed/bim/fam. Multiprocessing is now available."
+description = "Use fast FFT-based mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large CSV files or large genetic bed/bim/fam files. Multiprocessing is now available."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
