--- a/fastHDMI/pyproject.toml
+++ b/fastHDMI/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed_reader", "multiprocess>=0.70.6",  "bed-reader", "pandas>=1.4.4"]
+requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "scikit-learn>=1.0.2", "bed_reader", "multiprocess>=0.70.6",  "bed-reader", "pandas>=1.4.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastHDMI"
-version = "1.0.6"
+version = "1.0.28"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
