--- a/fastHDMI/pyproject.toml
+++ b/fastHDMI/pyproject.toml
@@ -1,14 +1,18 @@
 [build-system]
-requires = ["setuptools>=61.0", "cython"]
+requires = [
+    "setuptools",
+    "wheel",
+    "Cython"
+]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastHDMI"
-version = "1.18.20"
+version = "1.18.24"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
-description = "Use fast FFT-based mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large CSV files or large genetic bed/bim/fam files. Multiprocessing is now available."
+description = "Use FFT-based mutual information and accelerated gradient method to screen variables and optimize nonconvex sparse learning problems on large CSV files or large genetic bed/bim/fam files. Multiprocessing is now available."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
@@ -18,6 +22,9 @@ classifiers = [
     "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
     "Operating System :: OS Independent",
 ]
+
+[tools.setuptools]
+packages = ["src"]
 
 [project.urls]
 "Homepage" = "https://github.com/Kaiyangshi-Ito/fastHDMI"
