--- a/fastHDMI/pyproject.toml
+++ b/fastHDMI/pyproject.toml
@@ -12,7 +12,7 @@ version = "1.23.18"
 authors = [
   { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
 ]
-description = "Use FFT-based mutual information and accelerated gradient method to screen variables and optimize nonconvex sparse learning problems on large CSV files or large genetic bed/bim/fam files. Multiprocessing is now available."
+description = "Use FFT-based mutual information to screen variables, and use accelerated gradient method to optimize nonconvex sparse learning problems, on large CSV files or large genetic bed/bim/fam files. Multiprocessing is now available. Works well on MRI brain imaging data."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
